# Smart-Academic-Planning-and-Schedule-Optimization-System

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  package.json  playwright.config.ts  pnpm-lock.yaml  turbo.json
apps/api/: .dockerignore  alembic.ini  openapi.json  package.json  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260622_0001_create_dev_seed_records.py  20260622_0002_create_academic_domain.py  20260623_0003_create_course_rules_sections.py  20260623_0004_create_degree_audit_core.py  20260623_0005_create_academic_scenarios.py  20260624_0006_create_course_eligibility.py  20260629_0007_create_academic_planner.py  20260629_0008_create_schedule_optimizer.py  20260630_0009_phase_6b_schedule_optimization.py  20260630_0010_phase_7a_data_imports.py  20260630_0011_phase_7b_data_review.py  20260701_0012_browser_extension_source_type.py  20260701_0013_section_monitoring.py  20260711_0014_course_state_snapshots.py  20260712_0015_auth_tenant_object_access.py  20260714_0016_reviewed_rule_sets.py  (+4 more)
apps/api/app/: config.py  main.py  openapi_export.py  run.py  seed_dev.py
apps/api/packaging/: sapsos-api.spec
apps/api/scripts/: verify_local_desktop_schema.py
apps/api/tests/: test_academic_api.py  test_academic_models.py  test_academic_planner.py  test_academic_scenarios.py  test_auth_authorization.py  test_config.py  test_course_eligibility.py  test_data_imports.py  test_data_reviews.py  test_degree_audit_policy.py  test_final_handoff_docs.py  test_health.py  test_local_backup.py  test_local_data_removal.py  test_local_database.py  test_local_diagnostics.py  test_local_migrations.py  test_local_request_security.py  test_local_restore.py  test_local_runnable_package_docs.py  test_migration_contract.py  test_packaging_contract.py  test_pairing.py  test_production_safety_policy.py  test_reviewed_rules.py  test_reviewed_rules_api.py  test_reviewed_rules_integration.py  test_runtime_discovery.py  test_runtime_supervisor.py  test_schedule_optimizer.py  test_section_monitoring.py  test_security_headers.py  test_seed_dev.py  test_sqlite_compatibility.py  test_windows_installer_foundation.py  test_windows_installer_preflight.py  test_windows_installer_runtime_payload.py
desktop-shell/src-tauri/: Cargo.toml  tauri.conf.json
desktop-shell/src-tauri/src/: main.rs
desktop-shell/src-tauri/windows/: Install-Runtime-Payload.ps1  InstallerProcessCoordination.ps1  installer-hooks.nsh
(+213 files in other folders)
