[package]
name = "sapsos-desktop-shell-proof"
version = "0.1.0"
description = "Minimal Tauri desktop-shell proof for SAPSOS Local Desktop"
authors = ["SAPSOS"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
