[package]
name = "sapsos-local-desktop"
version = "0.1.0"
description = "SAPSOS Local Desktop application shell"
authors = ["SAPSOS"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
